<resources>
    <string name="app_name">Generación Dorada</string>
    <string name="ingrse_su_numero">Ingrese su numero:</string>
    <string name="numero_de_telefono">Numero de telefono</string>
    <string name="Enviar_SMS">Enviar SMS</string>
    <string name="aplicacion">Aplicación Generación Dorada</string>
    <string name="año">2023</string>
    <string name="verificar_codgio">Verificar codigo</string>
    <string name="ingrese_codigo_verificacion">Ingrese el codigo de verificación</string>
    <string name="mensaje_espera">Mensaje de espera Cambiante</string>
    <string name="Nombres">Nombres:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="cedula">Cedula:</string>
    <string name="rol">Rol:</string>
    <string name="ingresesunombre">Ingrese sus nombres</string>
    <string name="ingresesusapelldios">Ingrese sus apellidos</string>
    <string name="ingresesucedula">Ingrese su cedula</string>
    <string name="seleccione">Seleccione</string>
    <string name="aceptar">Aceptar</string>
    <string name="HOLAPERSONA">Hola [PERSONA]</string>
    <string name="Okbotonnoinicio">Entendido</string>
    <string name="noinicio">No pudo iniciar sesión, intente nuevamente</string>7
    <string name="cerrarsesion">Cerrar sesión</string>
    <string name="usted_es_paciente">Usted es</string>
    <string name="nombrepaciente">[NOMBRE PACIENTE]</string>
    <string name="apodopaciente">[APODO DE PACIENTE]</string>
    <string name="bienvenido">Bienvenido de nuevo, es un gusto \nverte por aquí! [FRASE CAMBIANTE]</string>
    <string name="bienvenidoacudiente">Cuida tu vida y la de tu seres mas queridos,\nmantente al tanto de tus seres mas queridos</string>
    <string name="Mednicamentos">Medicamentos</string>
    <string name="Agregarmedicamento">Agrega medicamentos</string>
    <string name="juegos">Juegos</string>
    <string name="Entrena_tu_mente">Entrena tu mente</string>
    <string name="agreguesufamiiar">Digite la cedula para agregar a su familiar</string>
    <string name="cedula_familiar">Cedula familiar</string>
    <string name="enviar">Enviar</string>
    <string name="apodofamiliar">Ingrese apodo</string>
    <string name="bienbenida_medicamentos">No olvides tomar tus medicamentos dentro\nde la hora establecida por tu doctor</string>
    <string name="bienbenida_medicamentos2">Recuerda cuidar de ti mismo y de tu salud,\n tomando tus medicamentos a tiempo. \n
Una pequeña acción que puede marcar una gran diferencia en tu bienestar. \n
¡No dejes que el olvido te juegue en contra!</string>
    <string name="tiempo">00hr</string>
    <string name="MEDICAMENTO">[MEDICAMENTO]</string>
    <string name="Siguiente_medicamento">Siguiente medicamento dentro de x horas y x minutos</string>
    <string name="horadetomar">00:00 (am/pm)</string>
    <string name="minijuego_1">Recuerda el\n patron</string>
    <string name="reinit_text">Reiniciar</string>
    <string name="exit_text">Salir</string>
    <string name="Registromedicamento">Registro medicamento</string>
    <string name="Medicamento">Medicamento</string>
    <string name="nombredemedicamento">Medicamento</string>
    <string name="med_ver">Ver medicamentos</string>
    <string name="dosis">[D]</string>
    <string name="horatomada">[HORA TOMADA]</string>
    <string name="atrasadoono">[RETRASADO / NO]</string>
    <string name="dosistext">Dosis</string>
    <string name="Horatomada">Hora tomada:</string>
    <string name="tiempotext">Tiempo:</string>
    <string name="historialedicamento">Historial</string>
    <string name="registroTomado">Registrar medicamento Tomado</string>
    <string name="yatomado">TOMADO</string>

</resources>