<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:padding="10dp"
    android:background="#fff"
    android:layout_gravity="center">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!---TEXT-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/agreguesufamiiar"/>

        <!---Edit text de cedula-->

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cedula_familiar"
            android:id="@+id/cedulafamiliar"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/apodofamiliar"
            android:id="@+id/familiarapodo"/>


        <!---BOTON PARA CERRAR DIALOG-->

        <Button
            android:id="@+id/btnsendfamiliar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>