<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="left">

        <TextView
            android:id="@+id/historialdosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dosis"
            android:textColor="@color/morado"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/historialtomado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horatomada"
            android:textColor="@color/morado"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/historialcalcsiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atrasadoono"
            android:textColor="@color/morado"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"/>



    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>