<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroNuevoUsuario">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="65dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnactinfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textnombre"
                    style="@style/textvirestilotextos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Nombres"
                    tools:layout_editor_absoluteX="47dp"
                    tools:layout_editor_absoluteY="271dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <EditText
                android:id="@+id/editnombre"
                style="@style/texview_morado_rendondo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingresesunombre"
                android:inputType="textPersonName"
                android:padding="20px"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="141dp"
                tools:layout_editor_absoluteY="277dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textapellido"
                    style="@style/textvirestilotextos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apellidos"
                    tools:layout_editor_absoluteX="47dp"
                    tools:layout_editor_absoluteY="271dp" />


            </androidx.appcompat.widget.LinearLayoutCompat>


            <EditText
                android:id="@+id/editapellido"
                style="@style/texview_morado_rendondo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingresesusapelldios"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="141dp"
                tools:layout_editor_absoluteY="277dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textcedula"
                    style="@style/textvirestilotextos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cedula"
                    tools:layout_editor_absoluteX="47dp"
                    tools:layout_editor_absoluteY="271dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <EditText
                android:id="@+id/editcedula"
                style="@style/texview_morado_rendondo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingresesucedula"
                android:inputType="number"
                tools:layout_editor_absoluteX="141dp"

                tools:layout_editor_absoluteY="277dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textrol"
                    style="@style/textvirestilotextos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rol"
                    tools:layout_editor_absoluteX="47dp"
                    tools:layout_editor_absoluteY="271dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <Spinner
                android:id="@+id/spinerrol"
                android:layout_width="228dp"
                android:layout_height="29dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/btnactinfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                android:dropDownItemStyle="@style/MySpinnerDropdownStyle" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnactinfo"
        style="@style/boton_redondo_morado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgmostrarprimero"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_marginTop="120dp"
            android:src="@drawable/userprefault"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/editbtnfoto"
            android:layout_width="61dp"
            android:layout_height="61dp"
            android:layout_gravity="right"
            android:layout_marginTop="-60dp"
            android:src="@drawable/editar" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>