<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroNuevoUsuario">

    <include
        android:id="@+id/toolvar_editarusuario"
        layout="@layout/toolbar_home"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="312dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textnombre"
                    style="@style/textvirestilotextos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Nombres"
                    tools:layout_editor_absoluteX="47dp"
                    tools:layout_editor_absoluteY="271dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <EditText
                android:id="@+id/editnombre_Recurrente"
                style="@style/texview_morado_rendondo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingresesunombre"
                android:inputType="textPersonName"
                android:padding="20px"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="141dp"
                tools:layout_editor_absoluteY="277dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textapellido"
                    style="@style/textvirestilotextos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apellidos"
                    tools:layout_editor_absoluteX="47dp"
                    tools:layout_editor_absoluteY="271dp" />


            </androidx.appcompat.widget.LinearLayoutCompat>


            <EditText
                android:id="@+id/editapellido_recurrente"
                style="@style/texview_morado_rendondo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingresesusapelldios"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="141dp"
                tools:layout_editor_absoluteY="277dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textcedula"
                    style="@style/textvirestilotextos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cedula"
                    tools:layout_editor_absoluteX="47dp"
                    tools:layout_editor_absoluteY="271dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <TextView
                android:id="@+id/showcedula"
                style="@style/textvirestilotextos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rol"
                tools:layout_editor_absoluteX="47dp"
                tools:layout_editor_absoluteY="271dp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textrol"
                    style="@style/textvirestilotextos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rol"
                    tools:layout_editor_absoluteX="47dp"
                    tools:layout_editor_absoluteY="271dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <TextView
                android:id="@+id/showrol"
                style="@style/textvirestilotextos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rol"
                tools:layout_editor_absoluteX="47dp"
                tools:layout_editor_absoluteY="271dp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="183dp"
        android:layout_height="177dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685"
        app:srcCompat="@drawable/userprefault" />

    <Button
        android:id="@+id/btrneditarinfo"
        style="@style/boton_redondo_morado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:text="Editar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>